--- a/.github/prompts/gen_dir_meta.md.template
+++ b/.github/prompts/gen_dir_meta.md.template
@@ -23,9 +23,9 @@
 
 请为上述目录生成以下元数据：
 
-- **描述**：提供目录内容的摘要和介绍，尽可能详细。
+- **描述**：提供目录内容的介绍，尽可能详细。
 - **标签**：列出描述目录内容或主题的相关标签或关键词。
 
-确保元数据准确。描述应为详细、信息丰富的几段话，尽可能详细、具体地讲解目录中的内容，
-适当摘抄文中出现的句子和内容。标签应相关且具体。所有的标签和描述信息均应为中文。如果
+确保元数据准确。介绍应为详细、信息丰富、多个段落的一个文章，根据目录的路径，尽可能详细、具体地对目录中的内容给出一个综述性的介绍和分析，
+可以适当摘抄其中出现的句子和内容，但不要使用列表。标签应相关且具体。所有的标签和描述信息均应为中文。如果
 你已知的信息不足以判断对应的标签和描述信息，请填写“未知”，或表明这是某个资料的一部分。
