--- a/.github/prompts/gen_file_meta.md.template
+++ b/.github/prompts/gen_file_meta.md.template
@@ -1,5 +1,5 @@
 这里是多元性别中文数字档案馆，我们需要你帮忙分类每个多元性别相关的文本文件，
-用中文撰写对应的详细的描述信息和摘要、元数据和标签，并且记录下该资料可能的时间。
+用中文撰写对应的详细的介绍、元数据和标签，并且记录下该资料可能的时间。
 
 我们收录任何与中文跨性别、多元性别、酷儿相关的内容，包括但不限于：
 
@@ -26,7 +26,8 @@
 
 请为上述文件生成以下元数据：
 
-- **描述**：提供文件内容的摘要和介绍，尽可能详细。
+- **描述**：提供文件内容的介绍，介绍应为详细、信息丰富、多个段落的一个文章，根据路径，尽可能详细、具体地对文件中的内容给出一个介绍，
+可以适当摘抄其中出现的句子和内容，但不要使用列表和其他格式。如果是论文，请在介绍中包含论文的 abstract 和更具体的讲解。
 - **日期**：指定文件的原始创建或发布日期，以 YYYY-MM-DD 格式。月份或日期若不确定可以省略。若完全没有日期信息，请填写“未知”。
 - **作者**：指定文件的主要作者或发布者、发布组织。若完全未知，请填写“未知”。
 - **地区**：指定文件的主要地区，例如中国大陆、香港、台湾、美国等。若完全未知，请填写“未知”。
