--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -2838,10 +2838,22 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 富德生命人寿终身护理保险产品说明书.pdf
   path: 社群及NGO文件/医院和医疗体系/富德生命人寿终身护理保险产品说明书.pdf
   md5: de7a0fa4c9ea0404984ff93471ba797f
+寒涟漪庇护所五年工作简报.pdf:
+  name: 寒涟漪庇护所五年工作简报.pdf
+  path: 社群及NGO文件/其他组织文件/寒涟漪庇护所五年工作简报.pdf
+  md5: 6ecc1a609ef78b0738c5e6f82814b5b1
+寒涟漪庇护所五年工作简报补充说明.pdf:
+  name: 寒涟漪庇护所五年工作简报补充说明.pdf
+  path: 社群及NGO文件/其他组织文件/寒涟漪庇护所五年工作简报补充说明.pdf
+  md5: 156572e13cf2499c78505acc68dd6a43
 寒涟漪庇护所介绍第一版.pdf:
   name: 寒涟漪庇护所介绍第一版.pdf
   path: 社群及NGO文件/其他组织文件/寒涟漪庇护所介绍第一版.pdf
   md5: 097c484a15b0423e75d3e29aec5e1ae3
+寒涟漪庇护所后续工作计划声明.pdf:
+  name: 寒涟漪庇护所后续工作计划声明.pdf
+  path: 社群及NGO文件/其他组织文件/寒涟漪庇护所后续工作计划声明.pdf
+  md5: 93988fee4bb9dbed388be877581cb805
 对变性人该关注什么_-_中国妇女报_-_2004.pdf:
   name: 对变性人该关注什么_-_中国妇女报_-_2004.pdf
   path: 杂志及新闻报道/中国大陆/对变性人该关注什么_-_中国妇女报_-_2004.pdf
@@ -3440,7 +3452,7 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   md5: 37e4f56fe135a1c84ace652a830e029e
 澳门大学法医学教程进度（2015-2016学年度）.pdf:
   name: 澳门大学法医学教程进度（2015-2016学年度）.pdf
-  path: 政府及官方组织文件/港澳台/澳门大学法医学教程进度（2015-2016学年度）.pdf
+  path: 社群及NGO文件/学校/澳门大学法医学教程进度（2015-2016学年度）.pdf
   md5: faf54d5ccf303fb371b6313b0313fa25
 為兒童和青少年保留選擇權.pdf:
   name: 為兒童和青少年保留選擇權.pdf
