--- a/.github/prompts/gen_file_meta.md.template
+++ b/.github/prompts/gen_file_meta.md.template
@@ -27,7 +27,7 @@
 请为上述文件生成以下元数据：
 
 - **描述**：提供文件内容的介绍，介绍应为详细、信息丰富、多个段落、大于 500 字的一个文章，根据路径，尽可能详细、具体地对文件中的内容给出一个介绍，
-不要使用列表和其他格式。可以适当摘抄其中出现的句子和内容，若有具体数据和观点必须包含。如果是论文，请在介绍中包含论文的原本的 abstract 和更具体的讲解。
+不要使用列表和其他格式，删去“首先”“其次”“此外”“总之“等隐性表达列表的词语。可以适当摘抄其中出现的句子和内容，若有具体数据和观点必须包含。如果是论文，请在介绍中包含论文的原本的 abstract 和更具体的讲解。
 只需尽可能详细的介绍和描述即可，不需要归纳和进一步的分析它的意义。
 - **日期**：指定文件的原始创建或发布日期，以 YYYY-MM-DD 格式。月份或日期若不确定可以省略。若完全没有日期信息，请填写“未知”。
 - **作者**：指定文件的主要作者或发布者、发布组织。若完全未知，请填写“未知”。
