--- a/政府及官方组织文件/港澳台/config.yml
+++ b/政府及官方组织文件/港澳台/config.yml
@@ -1,13 +1,29 @@
-name: 港澳台
-description: 该目录收录了关于港澳台地区政府及官方组织发布的与跨性别相关的文件和信息，涉及相关政策、法律和社会环境的内容。这些文件旨在提供更清晰的法律框架和社会支持，以促进跨性别群体的权益。
+name: 港澳台相关政府文件
+description: '该目录收录了来自香港与多元性别相关的政府及官方文件，其内容涉及跨性别者的权利、法律政策、医疗资源及社会环境记录。在《性别承认咨询文件》的意见书中，关注女性暴力协会提出性别承认应该是一项基本人权，强调跨性别者的选择权应当受到尊重，并详细讨论香港是否应设立性别承认制度。文中提到香港的性别问题并非二元对立，亟需关注性别少数群体的权利。该文件中提出的在法律上保护跨性别者的建议，强调应当设立新法规以确保其权利被充分保障，并提出了对性别认可的多样性的理解。
+
+
+  另一个文件关于2014年婚姻修订条例草案的公听会，记录了针对变性手术及跨性别人士的讨论，揭示了公众对变性手术的误解与关注。袁维昌医生在会上阐述了变性手术的重要性与合理性，同时也讨论了变性人士面临的法律与社会压力。
+
+
+  此外，关于全国大专院校运动会的跨性别学生运动员参与政策，目录中提供了一份政策草案，强调了保障跨性别运动员权益的重要性，主要内容围绕参与资格的标准及保障机制，以确保参与者能够在公平与尊重的环境中参赛。
+
+
+  目录中还包含了匹兹堡警察局与LGBTQIA性少数族群的互动记录，揭示社区对警方的失望及对性工作者和跨性别者权益的迫切关注。同时还有关于性别不安的治疗方法的讨论，探讨心理健康和医疗资源的现状。
+
+  该目录还收录了香港性文化学会关于性别承认的公众咨询问答，阐释了性别承认的法律问题，并提供了社会对变性人的接受度的分析，通过这些文件，展示了香港在跨性别法律承认与医疗支持方面的努力与挑战。'
 curator: ''
 source: ''
 tags:
-- 政府文件
-- 港澳台
 - 跨性别
+- 性别承认
 - 法律政策
+- 医疗资源
 - 社会环境
+- 性别平等
+- 运动员参与政策
+- 社会偏见
+- 医疗支持
+- 心理健康
 license: ''
 files:
 - name: 1997_關注婦女性暴力協會_性別承認諮詢意見書
@@ -157,13 +173,6 @@ files:
   size: 100487
   md5: 3f060beb6bbe7d0033841cc4d0a50429
   page: 性別變更戶政法令研討及案例分享_page.md
-- name: 澳门大学法医学教程进度（2015-2016学年度）
-  filename: 澳门大学法医学教程进度（2015-2016学年度）.pdf
-  type: document
-  format: PDF Document
-  size: 1237252
-  md5: faf54d5ccf303fb371b6313b0313fa25
-  page: 澳门大学法医学教程进度（2015-2016学年度）_page.md
 - name: 臺北市政府教育局109年性別平等工作成果報告
   filename: 臺北市政府教育局109年性別平等工作成果報告.pdf
   type: document
