--- a/社群及NGO文件/学校/config.yml
+++ b/社群及NGO文件/学校/config.yml
@@ -172,6 +172,13 @@ files:
   size: 5263772
   md5: e3215d520ac402c67676e73bcf8a0364
   page: 海华郡公立学校学生与家长手册_2018-2019_page.md
+- name: 澳门大学法医学教程进度（2015-2016学年度）
+  filename: 澳门大学法医学教程进度（2015-2016学年度）.pdf
+  type: document
+  format: PDF Document
+  size: 1237252
+  md5: faf54d5ccf303fb371b6313b0313fa25
+  page: 澳门大学法医学教程进度（2015-2016学年度）_page.md
 - name: 社会性别与社会_复旦密西根大学课程概况_2007
   filename: 社会性别与社会_复旦密西根大学课程概况_2007.pdf
   type: document
