--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -208,7 +208,7 @@
   md5: fecc3e53765ee5c709db5ca71acdd458
 1997_關注婦女性暴力協會_性別承認諮詢意見書.pdf:
   name: 1997_關注婦女性暴力協會_性別承認諮詢意見書.pdf
-  path: 政府及官方组织文件/港澳台/1997_關注婦女性暴力協會_性別承認諮詢意見書.pdf
+  path: 社群及NGO文件/其他组织文件/1997_關注婦女性暴力協會_性別承認諮詢意見書.pdf
   md5: aebcccd72f55aa1d6f24b3ddc28d3298
 2-详细的灌肠方法.jpg:
   name: 2-详细的灌肠方法.jpg
@@ -908,7 +908,7 @@ LGBTQI+抗争中的双语表达_2023_ANU_Press.pdf:
   md5: ac904f27a881886d5fbae9614ad089bb
 LGBTQIA性少数族群+咨询代表会问答_警察改革工作组.pdf:
   name: LGBTQIA性少数族群+咨询代表会问答_警察改革工作组.pdf
-  path: 政府及官方组织文件/港澳台/LGBTQIA性少数族群+咨询代表会问答_警察改革工作组.pdf
+  path: 政府及官方组织文件/美国/LGBTQIA性少数族群+咨询代表会问答_警察改革工作组.pdf
   md5: 412f78fbe86075da80195395464b0d83
 Laurel_Ridge小学社区利益相关者论坛倡议.pdf:
   name: Laurel_Ridge小学社区利益相关者论坛倡议.pdf
@@ -978,10 +978,6 @@ PDF_2018年男同性戀雙性戀及跨性別女性的精神健康.pdf:
   name: PDF_2018年男同性戀雙性戀及跨性別女性的精神健康.pdf
   path: 学术文献/医学/PDF_2018年男同性戀雙性戀及跨性別女性的精神健康.pdf
   md5: cedcd2fb12674648b0e1190ae2e1cc06
-PDF_5_性別不安有甚麼治療方法_-_醫院管理局.pdf:
-  name: PDF_5_性別不安有甚麼治療方法_-_醫院管理局.pdf
-  path: 政府及官方组织文件/港澳台/PDF_5_性別不安有甚麼治療方法_-_醫院管理局.pdf
-  md5: 8566283881b7dfad3a3794477b8920a4
 PDF_BEING_LGBT_IN_ASIA_CHINA_COUNTRY_REPORT_-_亚洲同志项目.pdf:
   name: PDF_BEING_LGBT_IN_ASIA_CHINA_COUNTRY_REPORT_-_亚洲同志项目.pdf
   path: 政府及官方组织文件/联合国/PDF_BEING_LGBT_IN_ASIA_CHINA_COUNTRY_REPORT_-_亚洲同志项目.pdf
@@ -990,10 +986,6 @@ PDF_BSA_指南有关性别认同问题的投诉.pdf:
   name: PDF_BSA_指南有关性别认同问题的投诉.pdf
   path: 社群及NGO文件/手册指南/PDF_BSA_指南有关性别认同问题的投诉.pdf
   md5: e8e303221067e34882318b40c41ea328
-PDF_CB420917-1819_-_立法會.pdf:
-  name: PDF_CB420917-1819_-_立法會.pdf
-  path: 政府及官方组织文件/港澳台/PDF_CB420917-1819_-_立法會.pdf
-  md5: 3bbeaf499e90e0822cde256f4774443e
 PDF_Cover_Page_校长致辞作为学校的家人保持联系_-_Mason_Families.pdf:
   name: PDF_Cover_Page_校长致辞作为学校的家人保持联系_-_Mason_Families.pdf
   path: 社群及NGO文件/学校/PDF_Cover_Page_校长致辞作为学校的家人保持联系_-_Mason_Families.pdf
@@ -1154,10 +1146,6 @@ PDF_司法的跃进与越界_-_反思香港终审法院之变性人结婚权案W
   name: PDF_司法的跃进与越界_-_反思香港终审法院之变性人结婚权案W_判例.pdf
   path: 学术文献/法律/PDF_司法的跃进与越界_-_反思香港终审法院之变性人结婚权案W_判例.pdf
   md5: c049bf43e39904c3bf40390b65fd09f5
-PDF_同志QA_-_性別平等教育委員會.pdf:
-  name: PDF_同志QA_-_性別平等教育委員會.pdf
-  path: 政府及官方组织文件/港澳台/PDF_同志QA_-_性別平等教育委員會.pdf
-  md5: ebfd539f235ed6b5fbff1d833d2308f8
 PDF_吳繼文酷兒小說中的性別飄浪_-_臺灣文學研究所-.pdf:
   name: PDF_吳繼文酷兒小說中的性別飄浪_-_臺灣文學研究所-.pdf
   path: 学术文献/人文社科/PDF_吳繼文酷兒小說中的性別飄浪_-_臺灣文學研究所-.pdf
@@ -1536,7 +1524,7 @@ PDF_跨性別是泛指任何人的性別認同及或其性別表達.pdf:
   md5: 9dc5e41bfab24f330ffbb51c41f05204
 PDF_跨性別者的日常生活_跨性別QA_大臺北跨性別友善資源_-_臺北市首座.pdf:
   name: PDF_跨性別者的日常生活_跨性別QA_大臺北跨性別友善資源_-_臺北市首座.pdf
-  path: 政府及官方组织文件/港澳台/PDF_跨性別者的日常生活_跨性別QA_大臺北跨性別友善資源_-_臺北市首座.pdf
+  path: 社群及NGO文件/手册指南/PDF_跨性別者的日常生活_跨性別QA_大臺北跨性別友善資源_-_臺北市首座.pdf
   md5: cd8185b572c73ee6246293dcdc44378a
 PDF_跨性別與教育社福醫療心理諮商的專業對話.pdf:
   name: PDF_跨性別與教育社福醫療心理諮商的專業對話.pdf
@@ -2098,6 +2086,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 人民日报_1993_我国变性手术达到世界先进水平.pdf
   path: 杂志及新闻报道/中国大陆/人民日报_1993_我国变性手术达到世界先进水平.pdf
   md5: 34eea651a3753f5fe651fdd566cfae59
+人民日报_从性别观说开去（2005年11月12日_第7版_副刊）.pdf:
+  name: 人民日报_从性别观说开去（2005年11月12日_第7版_副刊）.pdf
+  path: 杂志及新闻报道/中国大陆/人民日报_从性别观说开去（2005年11月12日_第7版_副刊）.pdf
+  md5: c9e27c6b9a83d7ad94ad87c66692d98f
 人类社会行为的双重属性及其双重判断.pdf:
   name: 人类社会行为的双重属性及其双重判断.pdf
   path: 学术文献/人文社科/人类社会行为的双重属性及其双重判断.pdf
@@ -2636,7 +2628,7 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   md5: 93a177864ed8db04ba4a47fbf3bf9e30
 各國跨性別登記制度_中华民国內政部委託研究報告.pdf:
   name: 各國跨性別登記制度_中华民国內政部委託研究報告.pdf
-  path: 政府及官方组织文件/港澳台/各國跨性別登記制度_中华民国內政部委託研究報告.pdf
+  path: 学术文献/法律/各國跨性別登記制度_中华民国內政部委託研究報告.pdf
   md5: 8b0617cf0a6358de0cb4929aaf7b2d9d
 同志酷兒教育實踐報告.pdf:
   name: 同志酷兒教育實踐報告.pdf
@@ -3538,6 +3530,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 温哥华跨性别政策反思报告.pdf
   path: 政府及官方组织文件/加拿大/温哥华跨性别政策反思报告.pdf
   md5: 282280739c3dc458907acc51fa6c8a68
+港澳知识分子专题杂志新闻_跨性别者抗争_2016年9月.pdf:
+  name: 港澳知识分子专题杂志新闻_跨性别者抗争_2016年9月.pdf
+  path: 社群及NGO文件/手册指南/港澳知识分子专题杂志新闻_跨性别者抗争_2016年9月.pdf
+  md5: e79a7204a124e22e2f11d1cd589c823a
 溶解完成.jpg:
   name: 溶解完成.jpg
   path: 社群及NGO文件/手册指南/雌二醇凝胶自制方法/溶解完成.jpg
@@ -4302,10 +4298,6 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 跨性别证件修改手册.pdf
   path: 社群及NGO文件/手册指南/跨性别证件修改手册.pdf
   md5: 88fa0af4a97084f72f3693b8a8bedeb0
-跨性别资源中心-港澳地区信息汇总.pdf:
-  name: 跨性别资源中心-港澳地区信息汇总.pdf
-  path: 政府及官方组织文件/港澳台/跨性别资源中心-港澳地区信息汇总.pdf
-  md5: e79a7204a124e22e2f11d1cd589c823a
 跨性别运动员参加高水平体育比赛的科学思考.pdf:
   name: 跨性别运动员参加高水平体育比赛的科学思考.pdf
   path: 学术文献/人文社科/跨性别运动员参加高水平体育比赛的科学思考.pdf
@@ -4530,13 +4522,17 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 项目名项目合作协议.pdf
   path: 社群及NGO文件/其他组织文件/项目名项目合作协议.pdf
   md5: fcddc4a8880b95757340a539023f2345
+香港公民党就《性别承认法》提交的意见书.pdf:
+  name: 香港公民党就《性别承认法》提交的意见书.pdf
+  path: 政府及官方组织文件/港澳台/香港公民党就《性别承认法》提交的意见书.pdf
+  md5: 3bbeaf499e90e0822cde256f4774443e
 香港台湾与中国大陆的酷儿电影节研究.pdf:
   name: 香港台湾与中国大陆的酷儿电影节研究.pdf
   path: 学术文献/人文社科/香港台湾与中国大陆的酷儿电影节研究.pdf
   md5: b22ce60d3ee2d3eaaf89dbf76f40446e
-香港性教育現狀與挑戰報告_2021.pdf:
-  name: 香港性教育現狀與挑戰報告_2021.pdf
-  path: 政府及官方组织文件/港澳台/香港性教育現狀與挑戰報告_2021.pdf
+香港性教育落後_性別多元社群刻劃不足_傳統觀念成推廣障礙.pdf:
+  name: 香港性教育落後_性別多元社群刻劃不足_傳統觀念成推廣障礙.pdf
+  path: 杂志及新闻报道/港澳台/香港性教育落後_性別多元社群刻劃不足_傳統觀念成推廣障礙.pdf
   md5: 396371f64bc55c6b3df3cfc468e3a6b0
 香港男跨女跨性別人士愛滋病風險及流行情況調查2017.pdf:
   name: 香港男跨女跨性別人士愛滋病風險及流行情況調查2017.pdf
