--- a/学术文献/法律/config.yml
+++ b/学术文献/法律/config.yml
@@ -169,6 +169,13 @@ files:
   size: 316588
   md5: 3e3d6fe2c9a5dfe23757539272240c57
   page: 变性手术算病假_整容手术算病假吗_page.md
+- name: 各國跨性別登記制度_中华民国內政部委託研究報告
+  filename: 各國跨性別登記制度_中华民国內政部委託研究報告.pdf
+  type: document
+  format: PDF Document
+  size: 2019808
+  md5: 8b0617cf0a6358de0cb4929aaf7b2d9d
+  page: 各國跨性別登記制度_中华民国內政部委託研究報告_page.md
 - name: 同性婚姻权的性理论分析_熊金才
   filename: 同性婚姻权的性理论分析_熊金才.pdf
   type: document
