--- a/政府及官方组织文件/美国/config.yml
+++ b/政府及官方组织文件/美国/config.yml
@@ -58,6 +58,13 @@ files:
   size: 197747
   md5: 30c47658a9ccd6cbb3e8c46eaab4854a
   page: Advocate__Aurora__Health_有关提供服务时严禁歧视的通知_page.md
+- name: LGBTQIA性少数族群+咨询代表会问答_警察改革工作组
+  filename: LGBTQIA性少数族群+咨询代表会问答_警察改革工作组.pdf
+  type: document
+  format: PDF Document
+  size: 311790
+  md5: 412f78fbe86075da80195395464b0d83
+  page: LGBTQIA性少数族群+咨询代表会问答_警察改革工作组_page.md
 - name: MCHD_COVID_疫苗接种登记表_2022
   filename: MCHD_COVID_疫苗接种登记表_2022.pdf
   type: document
