--- a/杂志及新闻报道/港澳台/config.yml
+++ b/杂志及新闻报道/港澳台/config.yml
@@ -81,4 +81,11 @@ files:
   size: 1228159
   md5: 651093630c662350235f1522b8c6b980
   page: 認定自己生錯了性別_大公报_page.md
+- name: 香港性教育落後_性別多元社群刻劃不足_傳統觀念成推廣障礙
+  filename: 香港性教育落後_性別多元社群刻劃不足_傳統觀念成推廣障礙.pdf
+  type: document
+  format: PDF Document
+  size: 1385188
+  md5: 396371f64bc55c6b3df3cfc468e3a6b0
+  page: 香港性教育落後_性別多元社群刻劃不足_傳統觀念成推廣障礙_page.md
 subdirs: []
