--- a/社群及NGO文件/其他组织文件/config.yml
+++ b/社群及NGO文件/其他组织文件/config.yml
@@ -18,6 +18,13 @@ files:
   size: 5795740
   md5: 7d11ca4fda939cbef3a0730d02901932
   page: -最新的HIV_临床研发数据驱动新一轮针对治疗预防和治愈的创新_page.md
+- name: 1997_關注婦女性暴力協會_性別承認諮詢意見書
+  filename: 1997_關注婦女性暴力協會_性別承認諮詢意見書.pdf
+  type: document
+  format: PDF Document
+  size: 2086783
+  md5: aebcccd72f55aa1d6f24b3ddc28d3298
+  page: 1997_關注婦女性暴力協會_性別承認諮詢意見書_page.md
 - name: 2021年度多元与包容报告_拳头公司
   filename: 2021年度多元与包容报告_拳头公司.pdf
   type: document
