--- a/学术文献/人文社科/config.yml
+++ b/学术文献/人文社科/config.yml
@@ -1403,6 +1403,12 @@ files:
   size: 1716555
   md5: d6833ba7502a489d39d28e30550cbc4c
   page: 跨性别教育的必要性与意义_page.md
+- name: 跨性别者及其共同体的认同实践与传播符号解读_张驰
+  filename: 跨性别者及其共同体的认同实践与传播符号解读_张驰.pdf
+  type: document
+  format: PDF Document
+  size: 3699113
+  md5: e34a17cf1225f014867152f7bd7df01a
 - name: 跨性别者自杀意念的影响因素探析Analysis_of_Influencing_Factors_of
   filename: 跨性别者自杀意念的影响因素探析Analysis_of_Influencing_Factors_of.pdf
   type: document
