--- a/学术文献/医学/config.yml
+++ b/学术文献/医学/config.yml
@@ -421,6 +421,12 @@ files:
   size: 141773
   md5: 9cb665114e4e6c58a09dacb7dd962d20
   page: hormones_MTF_page.md
+- name: “性别不一致”去精神病化的思考
+  filename: “性别不一致”去精神病化的思考.pdf
+  type: document
+  format: PDF Document
+  size: 544975
+  md5: dd9bb9bb52197eb5785034c05adf8a45
 - name: 两性畸形的超声特征_-_中国医学影像技术
   filename: 两性畸形的超声特征_-_中国医学影像技术.pdf
   type: document
@@ -442,6 +448,12 @@ files:
   size: 605157
   md5: e35e072de45846913f3646911f837a98
   page: 中国易性症多学科诊疗专家共识_page.md
+- name: 中国跨性别者非自杀倾向自残行为研究——流行率和风险因素的横断研究
+  filename: 中国跨性别者非自杀倾向自残行为研究——流行率和风险因素的横断研究.pdf
+  type: document
+  format: PDF Document
+  size: 523213
+  md5: df28d0bafbcad2174a99c951dedfd330
 - name: 亚洲男性学杂志_2013年15卷2期_精子质量与男性生殖健康研究文献汇总
   filename: 亚洲男性学杂志_2013年15卷2期_精子质量与男性生殖健康研究文献汇总.pdf
   type: document
@@ -694,6 +706,12 @@ files:
   size: 4828307
   md5: 402dbb6d6f8c8bfa40e3305ad7353db6
   page: 性及性身份识别障碍_page.md
+- name: 性发育异常儿童抚养性别再认识
+  filename: 性发育异常儿童抚养性别再认识.pdf
+  type: document
+  format: PDF Document
+  size: 1163259
+  md5: b4830cb3e04c0c71c0552d6f4d294047
 - name: 性少数人群心理实践指南
   filename: 性少数人群心理实践指南.pdf
   type: document
@@ -995,6 +1013,12 @@ files:
   size: 144333
   md5: 97b8d23cb965b900c4440ff66ca12115
   page: 阴蒂成形术11例报告_邢新_page.md
+- name: 雌二醇成膜凝胶的制备及其药代动力学的初步研究_潘悦
+  filename: 雌二醇成膜凝胶的制备及其药代动力学的初步研究_潘悦.pdf
+  type: document
+  format: PDF Document
+  size: 3417865
+  md5: b5d73726d78a925501a9026a67cc3f54
 - name: 雌性与草药治疗_林从欣_Patrick_动态研究
   filename: 雌性与草药治疗_林从欣_Patrick_动态研究.pdf
   type: document
