--- a/杂志及新闻报道/中国大陆/config.yml
+++ b/杂志及新闻报道/中国大陆/config.yml
@@ -255,6 +255,12 @@ files:
   size: 104958
   md5: b98606526879f6f555b129c2fad4a4e0
   page: 第六届北京酷儿影展闭幕新闻稿_2013_page.md
+- name: 被殴打、遭虐待，曝光特训学校的暗面
+  filename: 被殴打、遭虐待，曝光特训学校的暗面.pdf
+  type: document
+  format: PDF Document
+  size: 24598590
+  md5: b15a7d699886e28cc5751ea066c0d627
 - name: 西方的变性热_王克强
   filename: 西方的变性热_王克强.pdf
   type: document
